Include span attributes in CSV export.
You can now specify listspanattributes=s.id to include sentence ids
in your CSV export (comma-separated for multiple span attributes, e.g.
listspanattributes=s.id,s.person). This only works if your input data has
<s id="..."/> spans that were indexed, of course.

The regular (non-CSV) hits response already includes this information in
the matchInfos section for each hit.